# gpu-perf-tune

./: .doccheck.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REVIEWERS.md  SECURITY.md
plugins/profile-and-optimize/server/: AGENTS.md  CLAUDE.md  README.md  constraints-aa.txt  install.sh  mcp_surface.py  pyproject.toml
plugins/profile-and-optimize/server/ai_tuning/: __init__.py  cli.py
plugins/profile-and-optimize/server/docs/: README.md  STATUS_CONVENTION.md  agent-onboarding.md  agent-rationale.md  api.md  audience-entrypoints.md  cli-contract.md  first-hour.md  inference-fast-model-loading.md  mcp-composition.md  mcp-tool-io-contract.md  operator-commands.md  perf-lake-contract.md  profiling-and-perf-discovery.md  secrets.md  start-here.md  zymtrace-query-hygiene.md
plugins/profile-and-optimize/server/docs/learnings/: evidence-shape.md
plugins/profile-and-optimize/server/evidence/: __init__.py  cli.py
plugins/profile-and-optimize/server/findings/: __init__.py  cli.py
plugins/profile-and-optimize/server/known_good_config/: __init__.py  cli.py
plugins/profile-and-optimize/server/perf_baseline/: __init__.py  cli.py
plugins/profile-and-optimize/server/perf_tune_report/: __init__.py  cli.py
plugins/profile-and-optimize/server/profile/: __init__.py  cli.py
plugins/profile-and-optimize/server/runbooks/: README.md  profile-a-regression.md
plugins/profile-and-optimize/server/slurm/: __init__.py  cli.py
plugins/profile-and-optimize/server/tools/: README.md  __init__.py  capacity_sizing.py  loader_advisor.py  local-nvme-probe.sh  stage-model-parallel.py  test_capacity_sizing.py  test_loader_advisor.py  test_tp_rightsize_advisor.py  tp_rightsize_advisor.py
plugins/profile-and-optimize/server/tools/ai_tuning/: README.md  __init__.py  ai_tuning.py  cli.py  cmd_experiment.py  cmd_finalize.py  cmd_optimizer.py  cmd_proposal.py  cmd_report.py  cmd_space.py  cmd_template_patch.py  helpers.py  io.py  mlperf_rules.py  proposals.py  safety.py  test_ai_tuning.py  test_mlperf_rules.py  test_modules.py  test_optimizer.py  test_safety.py
plugins/profile-and-optimize/server/tools/ai_tuning/optimizer/: __init__.py  gp.py  hyp_format.py  hyp_session.py  hyperband.py  space.py  tpe.py  types.py
plugins/profile-and-optimize/server/tools/evidence/: __init__.py  evidence_cli.py  test_evidence.py
plugins/profile-and-optimize/server/tools/findings/: __init__.py  findings_cli.py  test_findings.py
plugins/profile-and-optimize/server/tools/known_good_config/: __init__.py  known_good_config_cli.py  test_known_good_config.py
plugins/profile-and-optimize/server/tools/perf_baseline/: __init__.py  helpers.py  perf_baseline_cli.py  test_perf_baseline.py
plugins/profile-and-optimize/server/tools/perf_tune_report/: ROOFLINE-METHODOLOGY.md  __init__.py  aggregator.py  capture_signature.py  champion_select.py  coverage.py  dcgm_correlate.py  experiments_index.py  fleet_leaderboard.py  helpers.py  kernel_reproducer.py  lake_writer.py  perf_tune_report_cli.py  portability_view.py  provenance.py  raw_bench_compare.py  roofline_math.py  schema.py  test_aa_workload.py  test_campaign_run.py  test_capture_signature.py  test_champion_select.py  test_correlate_from_frozen.py  test_datacapture_gaps.py  test_dcgm_correlate.py  test_dcgm_sol.py  test_experiments_index.py  test_fleet_leaderboard.py  test_graph_diff.py  test_import_aiperf.py  test_import_drive_load.py  test_import_perf_bench.py  test_import_variant_ab.py  test_import_workloads.py  test_kernel_profile.py  test_kernel_reproducer.py  test_lws_summary.py  test_methodology_gate.py  test_model_eval.py  test_ncu_kernels.py  (+24 more)
plugins/profile-and-optimize/server/tools/perf_tune_report/fixtures/: _build_synthetic_atlas.py  synthetic_atlas.jsonl
plugins/profile-and-optimize/server/tools/perf_tune_report/graph_diff/: __init__.py  graph_diff.py
plugins/profile-and-optimize/server/tools/perf_tune_report/importers/: __init__.py  aiperf_export.py  inference_drive_load.py  inference_perf_bench.py  lws_summary.py  model_eval.py  ncu_kernels.py  nsys_kernels.py  roofline_sweep.py  variant_ab.py  workloads.py  zymtrace_kernels.py
plugins/profile-and-optimize/server/tools/perf_tune_report/kernel_profile/: __init__.py  (+1 more)
plugins/profile-and-optimize/server/tools/pipeline/: __init__.py
plugins/profile-and-optimize/server/tools/profile_and_optimize_mcp/: INSTALL.md  README.md  pyproject.toml
plugins/profile-and-optimize/server/tools/profiling/: README.md  __init__.py
plugins/profile-and-optimize/server/tools/shared/: __init__.py  artifact_bundle.py  capture_cmd.sh  jsonutil.py  test_artifact_bundle.py  test_capture_cmd.sh  test_python_entrypoints.py  test_validation_schema.py  validation_schema.py
plugins/profile-and-optimize/server/tools/slurm/: __init__.py  signature_patterns.py  slurm_cli.py  test_slurm.py
plugins/profile-and-optimize/server/tuning/best-known/: README.md
(+148 files in other folders)
