[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-and-optimize-server"
version = "0.2.0"
description = "Bundled MCP server source for the GPU-fleet profile-and-optimize Claude Code plugin. <your-org>/claude-perf-tune is the source of truth. Ships 8 CLI stub libraries (ai_tuning / profile / perf_baseline / evidence / slurm / findings / perf_tune_report / known_good_config) + the tools/ implementation tree that mcp_surface.py derives 51 contract-driven MCP tools from (+ 2 auxiliary = 53 total)."
requires-python = ">=3.11"
authors = [{name = "the repo author"}]
dependencies = [
  "mcp[cli]>=1.2.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
leaderboard = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]
# Added in profile-and-optimize v1.10.0. Backs the inference-perf-tune-report skill / perftunereport CLI.
# matplotlib is required for the PDF renderer; pandas is used by aggregator and aiperf log parser.
# v1.16.0 added pyarrow + boto3 for the publish_to_lake verb (writes Parquet to S3 BYOB bucket).
perf_tune_report = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "boto3>=1.34",
  # Added in profile-and-optimize v1.27.0 for the inference-aa-workload dataset generator
  # (exact o200k_base token-budget sizing in aa_workload.generate_aa_dataset).
  "tiktoken>=0.7",
]
# `dev` extra is what `install.sh --with-dev` installs. Pin pytest to a tested
# range so cache-side `make` + `pytest tools/` work without side-channel `pip`.
dev = [
  "pre-commit>=4.0",
  "pyright>=1.1",
  "pytest>=8.0,<10",
  "pytest-xdist>=3.6",
  "ruff>=0.8",
]

[project.scripts]
# Added in profile-and-optimize v1.10.0 (native to profile-and-optimize). Backs the inference-perf-tune-report skill.
perftunereport = "perf_tune_report.cli:main"

[tool.setuptools.packages.find]
include = [
  "ai_tuning*",
  "profile*",
  # Added in profile-and-optimize v0.4.0 (native to profile-and-optimize).
  "perf_baseline*",
  "evidence*",
  # Added in profile-and-optimize v0.5.0 (native to profile-and-optimize).
  "slurm*",
  # Added in profile-and-optimize v0.8.2 (native to profile-and-optimize).
  # Added in profile-and-optimize v0.9.0 (native to profile-and-optimize).
  "findings*",
  # Added in profile-and-optimize v1.1.0 (native to profile-and-optimize).
  # Added in profile-and-optimize v1.6.0 (native to profile-and-optimize).
  # Added in profile-and-optimize v1.10.0 (native to profile-and-optimize). Backs the inference-perf-tune-report skill.
  "perf_tune_report*",
  # Added in profile-and-optimize v1.68.0 (native to profile-and-optimize). Backs the inference-known-good-config skill.
  "known_good_config*",
  "tools*",
]
exclude = [
  "tools.profile_and_optimize_mcp*",
  "**.tests*",
  "experiments*",
]
namespaces = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  "experiments",
  "__pycache__",
  ".pytest_cache",
  "tools/profile_and_optimize_mcp",
]

[tool.pytest.ini_options]
# Authoritative test surface for the bundled server: the profile-and-optimize-native
# library test trees only. `pytest` with no args (the canonical `make pytest`
# entry point) discovers exactly these. Trees outside this list (e.g.
# tools/shared/, tools/profile_and_optimize_mcp/tests/) are exercised by their
# own entry points or opt-in `pytest tools/` runs.
testpaths = [
  "tools/perf_baseline",
  "tools/evidence",
  "tools/slurm",
  "tools/findings",
  # Added in profile-and-optimize v1.6.0 (native to profile-and-optimize).
  # Added in profile-and-optimize v1.5.2 (Llama 4 recipe forward-port;
  # opt-in to the default surface because it's profile-and-optimize-authored, NOT
  # vendored from MLPerf reference).
  # Added in profile-and-optimize v1.10.0 (native to profile-and-optimize). Backs the inference-perf-tune-report skill.
  "tools/perf_tune_report",
  # Added in profile-and-optimize v1.68.0 (native to profile-and-optimize). Backs the inference-known-good-config skill.
  "tools/known_good_config",
]
